--- a/app/src/main/res/layout/fragment_register_account.xml
+++ b/app/src/main/res/layout/fragment_register_account.xml
@@ -5,16 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activities.Register.Fragment.RegisterAccountFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:baselineAligned="true">
+
+            <ImageView
+                android:id="@+id/button_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_back_arrow"
+                android:padding="8dp"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -38,161 +50,212 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/count_green"/>
+                android:src="@drawable/count_green" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/count_green"/>
+                android:src="@drawable/count_green" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/count_green"/>
+                android:src="@drawable/count_green" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/count_green"/>
+                android:src="@drawable/count_green" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/count_green"/>
+                android:src="@drawable/count_green" />
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="30dp">
+            app:cardCornerRadius="30dp"
+            app:cardElevation="4dp">
+
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
+                android:layout_height="match_parent">
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="16dp"
-                    android:fontFamily="@font/queensidesmedium"
-                    android:text="@string/new_account"
-                    android:textAlignment="center"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/Account_heading"
-                    android:textSize="16sp"
-                    android:layout_marginHorizontal="16dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/email_star"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:padding="5dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginTop="20dp"/>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardElevation="4dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="5dp"
-                    app:cardCornerRadius="30dp">
-                    <EditText
-                        android:id="@+id/email_edit_text"
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        android:fontFamily="@font/queensidesmedium"
+                        android:text="@string/new_account"
+                        android:textAlignment="center"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:text="@string/Account_heading"
+                        android:textSize="16sp" />
+
+                    <!--                <TextView-->
+                    <!--                    android:layout_width="match_parent"-->
+                    <!--                    android:layout_height="wrap_content"-->
+                    <!--                    android:text="@string/email_star"-->
+                    <!--                    android:textSize="16sp"-->
+                    <!--                    android:textStyle="bold"-->
+                    <!--                    android:padding="5dp"-->
+                    <!--                    android:layout_marginHorizontal="16dp"-->
+                    <!--                    android:layout_marginTop="20dp"/>-->
+
+                    <!--                <androidx.cardview.widget.CardView-->
+                    <!--                    android:layout_width="match_parent"-->
+                    <!--                    android:layout_height="wrap_content"-->
+                    <!--                    app:cardElevation="4dp"-->
+                    <!--                    android:layout_marginHorizontal="16dp"-->
+                    <!--                    android:layout_marginBottom="5dp"-->
+                    <!--                    app:cardCornerRadius="30dp">-->
+                    <!--                    <EditText-->
+                    <!--                        android:id="@+id/email_edit_text"-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:hint="@string/email"-->
+                    <!--                        android:background="@drawable/custom_edit_text"-->
+                    <!--                        android:padding="10dp"-->
+                    <!--                        android:drawablePadding="5dp"-->
+                    <!--                        android:drawableLeft="@drawable/baseline_email_24"-->
+                    <!--                        android:textSize="18sp"/>-->
+                    <!--                </androidx.cardview.widget.CardView>-->
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/MyOutlinedTextInputLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
                         android:hint="@string/email"
-                        android:background="@drawable/custom_edit_text"
-                        android:padding="10dp"
-                        android:drawablePadding="5dp"
-                        android:drawableLeft="@drawable/baseline_email_24"
-                        android:textSize="18sp"/>
-                </androidx.cardview.widget.CardView>
+                        android:layout_marginVertical="16dp">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/password_star"
-                    android:padding="5dp"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginHorizontal="16dp"
-                    />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/email_edit_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardElevation="4dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="5dp"
-                    app:cardCornerRadius="30dp">
-                    <EditText
-                        android:id="@+id/password_edit_text"
+                    <!--                <TextView-->
+                    <!--                    android:layout_width="match_parent"-->
+                    <!--                    android:layout_height="wrap_content"-->
+                    <!--                    android:text="@string/password_star"-->
+                    <!--                    android:padding="5dp"-->
+                    <!--                    android:textSize="16sp"-->
+                    <!--                    android:textStyle="bold"-->
+                    <!--                    android:layout_marginHorizontal="16dp"-->
+                    <!--                    />-->
+
+                    <!--                <androidx.cardview.widget.CardView-->
+                    <!--                    android:layout_width="match_parent"-->
+                    <!--                    android:layout_height="wrap_content"-->
+                    <!--                    app:cardElevation="4dp"-->
+                    <!--                    android:layout_marginHorizontal="16dp"-->
+                    <!--                    android:layout_marginBottom="5dp"-->
+                    <!--                    app:cardCornerRadius="30dp">-->
+                    <!--                    <EditText-->
+                    <!--                        android:id="@+id/password_edit_text"-->
+                    <!--                        android:layout_width="match_parent"-->
+                    <!--                        android:layout_height="wrap_content"-->
+                    <!--                        android:hint="@string/password"-->
+                    <!--                        android:background="@drawable/custom_edit_text"-->
+                    <!--                        android:padding="10dp"-->
+                    <!--                        android:drawablePadding="5dp"-->
+                    <!--                        android:drawableLeft="@drawable/baseline_lock_24"-->
+                    <!--                        android:textSize="18sp"-->
+                    <!--                        android:inputType="textPassword"/>-->
+
+                    <!--                </androidx.cardview.widget.CardView>-->
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/MyOutlinedTextInputLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
                         android:hint="@string/password"
-                        android:background="@drawable/custom_edit_text"
-                        android:padding="10dp"
-                        android:drawablePadding="5dp"
-                        android:drawableLeft="@drawable/baseline_lock_24"
-                        android:textSize="18sp"
-                        android:inputType="textPassword"/>
+                        android:layout_marginVertical="16dp">
 
-                </androidx.cardview.widget.CardView>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/password_edit_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/confirm_password_star"
-                    android:padding="5dp"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginHorizontal="16dp"
-                    />
+<!--                    <TextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:text="@string/confirm_password_star"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textStyle="bold" />-->
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardElevation="4dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="130dp"
-                    app:cardCornerRadius="30dp">
-                    <EditText
-                        android:id="@+id/confirm_password_edit_text"
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:layout_marginBottom="130dp"-->
+<!--                        app:cardCornerRadius="30dp"-->
+<!--                        app:cardElevation="4dp">-->
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/confirm_password_edit_text"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:background="@drawable/custom_edit_text"-->
+<!--                            android:drawableLeft="@drawable/baseline_lock_24"-->
+<!--                            android:drawablePadding="5dp"-->
+<!--                            android:hint="@string/confirm_password"-->
+<!--                            android:inputType="textPassword"-->
+<!--                            android:padding="10dp"-->
+<!--                            android:textSize="18sp" />-->
+<!--                    </androidx.cardview.widget.CardView>-->
+
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        style="@style/MyOutlinedTextInputLayout"
                         android:hint="@string/confirm_password"
-                        android:textSize="18sp"
-                        android:background="@drawable/custom_edit_text"
-                        android:padding="10dp"
-                        android:drawablePadding="5dp"
-                        android:drawableLeft="@drawable/baseline_lock_24"
-                        android:inputType="textPassword"/>
-                </androidx.cardview.widget.CardView>
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginVertical="16dp"
+                        >
 
-                <Button
-                    android:id="@+id/done_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginBottom="30dp"
-                    android:text="@string/done"
-                    app:backgroundTint="@color/secondary_stroke_blue"/>
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/confirm_password_edit_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-            </LinearLayout>
+                    <Button
+                        android:id="@+id/done_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginVertical="20dp"
+                        android:text="@string/done"
+                        app:backgroundTint="@color/secondary_stroke_blue" />
+
+                </LinearLayout>
             </ScrollView>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
