--- a/app/src/main/res/layout/fragment_register_vehicle.xml
+++ b/app/src/main/res/layout/fragment_register_vehicle.xml
@@ -19,7 +19,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="16dp"
+                android:gravity="center_vertical"
+                android:baselineAligned="true">
+                <ImageView
+                    android:id="@+id/button_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_back_arrow"
+                    android:padding="8dp"
+                    />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -87,86 +96,134 @@
                         android:text="@string/vehicle_heading"
                         android:textSize="16sp" />
 
-                    <TextView
+<!--                    <TextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:text="@string/brand"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textStyle="bold" />-->
+
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:layout_marginBottom="16dp"-->
+<!--                        app:cardCornerRadius="30dp"-->
+<!--                        app:cardElevation="4dp">-->
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/vehicle_brand_edit_text"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:background="@drawable/custom_edit_text"-->
+<!--                            android:hint="@string/brand"-->
+<!--                            android:padding="10dp"-->
+<!--                            android:textSize="18sp" />-->
+<!--                    </androidx.cardview.widget.CardView>-->
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/MyOutlinedTextInputLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:hint="@string/brand"
                         android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"
-                        android:text="@string/brand"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:layout_marginBottom="30dp"
+                        >
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp"
-                        app:cardElevation="4dp">
-
-                        <EditText
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:id="@+id/vehicle_brand_edit_text"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+<!--                    <TextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:text="@string/name"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textStyle="bold" />-->
+
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:layout_marginBottom="16dp"-->
+<!--                        app:cardCornerRadius="30dp"-->
+<!--                        app:cardElevation="4dp">-->
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/vehicle_name_edit_text"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:background="@drawable/custom_edit_text"-->
+<!--                            android:hint="@string/name"-->
+<!--                            android:padding="10dp"-->
+<!--                            android:textSize="18sp" />-->
+<!--                    </androidx.cardview.widget.CardView>-->
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/MyOutlinedTextInputLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/name"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginBottom="30dp"
+                        >
+
+                        <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/custom_edit_text"
-                            android:hint="@string/brand"
-                            android:padding="10dp"
-                            android:textSize="18sp" />
-                    </androidx.cardview.widget.CardView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"
-                        android:text="@string/name"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp"
-                        app:cardElevation="4dp">
-
-                        <EditText
+                            android:layout_height="match_parent"
                             android:id="@+id/vehicle_name_edit_text"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+<!--                    <TextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:text="@string/color"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textStyle="bold" />-->
+
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:layout_marginBottom="16dp"-->
+<!--                        app:cardCornerRadius="30dp"-->
+<!--                        app:cardElevation="4dp">-->
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/vehicle_color_edit_text"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:background="@drawable/custom_edit_text"-->
+<!--                            android:hint="@string/color"-->
+<!--                            android:padding="10dp"-->
+<!--                            android:textSize="18sp" />-->
+<!--                    </androidx.cardview.widget.CardView>-->
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/MyOutlinedTextInputLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/color"
+                        android:layout_marginHorizontal="16dp"
+                        android:layout_marginBottom="30dp"
+                        >
+
+                        <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/custom_edit_text"
-                            android:hint="@string/name"
-                            android:padding="10dp"
-                            android:textSize="18sp" />
-                    </androidx.cardview.widget.CardView>
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"
-                        android:text="@string/color"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp"
-                        app:cardElevation="4dp">
-
-                        <EditText
+                            android:layout_height="match_parent"
                             android:id="@+id/vehicle_color_edit_text"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/custom_edit_text"
-                            android:hint="@string/color"
-                            android:padding="10dp"
-                            android:textSize="18sp" />
-                    </androidx.cardview.widget.CardView>
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -177,14 +234,32 @@
                         android:textSize="16sp"
                         android:textStyle="bold" />
 
-                    <androidx.cardview.widget.CardView
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:layout_marginBottom="16dp"-->
+<!--                        app:cardCornerRadius="30dp"-->
+<!--                        app:cardElevation="4dp">-->
+
+<!--                        <Spinner-->
+<!--                            android:id="@+id/seat_capacity_spinner"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:background="@drawable/custom_edit_text"-->
+<!--                            android:hint="@string/seat_capacity"-->
+<!--                            android:paddingHorizontal="8dp"-->
+<!--                            android:paddingVertical="10dp"-->
+<!--                            android:textSize="18sp" />-->
+<!--                    </androidx.cardview.widget.CardView>-->
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/MyOutlinedTextInputLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:hint="@string/color"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp"
-                        app:cardElevation="4dp">
-
+                        android:layout_marginBottom="30dp"
+                        >
                         <Spinner
                             android:id="@+id/seat_capacity_spinner"
                             android:layout_width="match_parent"
@@ -194,17 +269,18 @@
                             android:paddingHorizontal="8dp"
                             android:paddingVertical="10dp"
                             android:textSize="18sp" />
-                    </androidx.cardview.widget.CardView>
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="16dp"
-                        android:padding="5dp"
-                        android:text="@string/number_plate"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+<!--                    <TextView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:padding="5dp"-->
+<!--                        android:text="@string/number_plate"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:textStyle="bold" />-->
 
                     <TextView
                         android:layout_width="match_parent"
@@ -215,23 +291,39 @@
                         android:textSize="16sp"
                         android:textStyle="italic" />
 
-                    <androidx.cardview.widget.CardView
+<!--                    <androidx.cardview.widget.CardView-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="16dp"-->
+<!--                        android:layout_marginBottom="16dp"-->
+<!--                        app:cardCornerRadius="30dp"-->
+<!--                        app:cardElevation="4dp">-->
+
+<!--                        <EditText-->
+<!--                            android:id="@+id/vehicle_number_plate_edit_text"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:background="@drawable/custom_edit_text"-->
+<!--                            android:hint="@string/number_plate"-->
+<!--                            android:padding="10dp"-->
+<!--                            android:textSize="18sp" />-->
+<!--                    </androidx.cardview.widget.CardView>-->
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/MyOutlinedTextInputLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:hint="@string/number_plate"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="16dp"
-                        app:cardCornerRadius="30dp"
-                        app:cardElevation="4dp">
+                        android:layout_marginBottom="30dp"
+                        >
 
-                        <EditText
-                            android:id="@+id/vehicle_number_plate_edit_text"
+                        <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/custom_edit_text"
-                            android:hint="@string/number_plate"
-                            android:padding="10dp"
-                            android:textSize="18sp" />
-                    </androidx.cardview.widget.CardView>
+                            android:layout_height="match_parent"
+                            android:id="@+id/vehicle_number_plate_edit_text"
+                            />
+
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <TextView
                         android:layout_width="match_parent"
