--- a/app/src/main/res/layout/fragment_booking_detail.xml
+++ b/app/src/main/res/layout/fragment_booking_detail.xml
@@ -526,7 +526,7 @@
             app:cardBackgroundColor="@color/white"
             app:strokeColor="@color/black"
             android:layout_margin="5dp"
-            android:visibility="visible">
+            android:visibility="gone">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
