--- a/app/src/main/res/layout/user_vehicle_card_view.xml
+++ b/app/src/main/res/layout/user_vehicle_card_view.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
     android:id="@+id/vehicle_list_container"
-    app:strokeColor="@color/black"
+    app:strokeColor="@color/light_black"
     app:cardElevation="8dp"
     android:backgroundTint="@color/light_pink"
     app:cardCornerRadius="20dp"
@@ -21,7 +21,8 @@
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="200dp"
                 android:layout_margin="8dp"
-                app:strokeColor="@color/black"
+                app:strokeColor="@color/light_black"
+                app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="20dp"
                 android:layout_height="match_parent">
 
