--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -22,12 +22,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="visible">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="41dp"
                 android:background="@drawable/rouned_background"
-                android:elevation="5dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
