--- a/app/src/main/res/drawable/bg_spinner.xml
+++ b/app/src/main/res/drawable/bg_spinner.xml
@@ -6,7 +6,7 @@
             <shape
                 android:shape="rectangle">
                 <solid
-                    android:color="@color/pale_light_blue">
+                    android:color="@color/white">
 
                 </solid>
                 <padding
