--- a/app/src/main/res/layout/fragment_register_vehicle.xml
+++ b/app/src/main/res/layout/fragment_register_vehicle.xml
@@ -252,28 +252,44 @@
 <!--                            android:paddingVertical="10dp"-->
 <!--                            android:textSize="18sp" />-->
 <!--                    </androidx.cardview.widget.CardView>-->
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/MyOutlinedTextInputLayout"
+
+<!--                        <Spinner-->
+<!--                            android:id="@+id/seat_capacity_spinner"-->
+<!--                            android:layout_width="match_parent"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:background="@drawable/custom_edit_text"-->
+<!--                            android:padding="15dp"-->
+<!--                            android:hint="@string/seat_capacity"-->
+<!--                            android:paddingHorizontal="8dp"-->
+<!--                            android:paddingVertical="10dp"-->
+<!--                            android:textSize="18sp" />-->
+                    <com.google.android.material.card.MaterialCardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/color"
+                        app:cardElevation="4dp"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginBottom="30dp"
+                        android:layout_marginBottom="16dp"
+                        app:cardCornerRadius="5dp"
+                        app:strokeColor="@color/black"
+                        android:backgroundTint="@color/white"
                         >
+
                         <Spinner
                             android:id="@+id/seat_capacity_spinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/custom_edit_text"
                             android:hint="@string/seat_capacity"
+                            android:textSize="18sp"
                             android:paddingHorizontal="8dp"
-                            android:paddingVertical="10dp"
-                            android:textSize="18sp" />
+                            android:padding="15dp"
+                            android:paddingVertical="10dp"/>
+                    </com.google.android.material.card.MaterialCardView>
 
-                    </com.google.android.material.textfield.TextInputLayout>
 
 
-<!--                    <TextView-->
+
+
+                    <!--                    <TextView-->
 <!--                        android:layout_width="match_parent"-->
 <!--                        android:layout_height="wrap_content"-->
 <!--                        android:layout_marginHorizontal="16dp"-->
