--- a/app/src/main/res/layout/user_address_card_view.xml
+++ b/app/src/main/res/layout/user_address_card_view.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
     android:id="@+id/address_list_container"
-    app:cardCornerRadius="20dp"
+    app:cardCornerRadius="10dp"
     android:backgroundTint="@color/light_pink"
     app:cardElevation="8dp"
     android:layout_margin="8dp"
@@ -86,6 +86,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/setDefaultBtn"
                 android:layout_width="match_parent"
+                app:cornerRadius="10dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginBottom="5dp"
@@ -99,20 +100,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/edit_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/edit"
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"
-
+                    app:cornerRadius="10dp"
                     android:backgroundTint="@color/quantum_googgreen"/>
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/delete_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/delete"
+                    app:cornerRadius="10dp"
                     android:layout_weight="1"
 
                     android:backgroundTint="@color/light_orange_red"/>
