--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="green">#4CAF50</color>
     <color name="pale_light_blue">#EFF9FA</color>
     <color name="focused_color">#00B6BC</color>
+    <color name="noti_color">#BBECED</color>
     <color name="unfocused_color">#FF000000</color>
 
 
