--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -60,7 +60,8 @@
                 android:layout_marginVertical="8dp"
                 android:text="@string/personal_details"
                 android:textSize="26sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:fontFamily="@font/instagramsansregular"/>
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
@@ -85,8 +86,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/name_header"
-                            android:textSize="16sp"
-                            android:textStyle="bold" />
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            />
 
                         <EditText
                             android:id="@+id/name"
@@ -94,9 +96,10 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_weight="1"
-                            android:background="@drawable/custom_edit_text"
+                            android:background="@null"
                             android:padding="10dp"
-                            android:text="@string/name" />
+                            android:text="@string/name"
+                            android:textSize="20sp"/>
 
                     </LinearLayout>
 
@@ -109,7 +112,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/email_header"
-                            android:textSize="16sp"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -118,7 +121,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_weight="1"
-                            android:textSize="18sp"
+                            android:textSize="20sp"
                             android:padding="10dp"
                             android:text="Email">
 
@@ -136,14 +139,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/gender_header"
-                            android:textSize="16sp"
+                            android:textSize="20sp"
                             android:textStyle="bold" />
 
                         <RadioGroup
                             android:id="@+id/radioGroupGender"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="16dp"
+                            android:layout_marginHorizontal="25dp"
                             android:orientation="horizontal">
 
                             <RadioButton
@@ -151,7 +154,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/male"
-                                android:textSize="16sp" />
+                                android:textSize="20sp" />
 
                             <RadioButton
                                 android:id="@+id/radioButtonFemale"
@@ -159,7 +162,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
                                 android:text="@string/female"
-                                android:textSize="16sp" />
+                                android:textSize="20sp" />
                         </RadioGroup>
 
                     </LinearLayout>
@@ -183,7 +186,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_weight="1"
-                            android:background="@drawable/custom_edit_text"
+                            android:background="@null"
                             android:padding="10dp"
                             android:text="@string/phone_number">
 
@@ -206,6 +209,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginBottom="8dp"
                 android:text="@string/home"
                 android:textSize="26sp"
                 android:textStyle="bold" />
@@ -228,13 +232,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/address_header"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -243,9 +248,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="1"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:padding="10dp"
-                        android:text="@string/default_address">
+                        android:text="@string/default_address"
+                        android:background="@null"
+                        >
 
                     </TextView>
 
@@ -266,7 +273,8 @@
                 android:layout_marginTop="24dp"
                 android:text="@string/vehicle"
                 android:textSize="26sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginBottom="8dp"/>
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/defaultVehicleCardView"
                 android:layout_width="match_parent"
@@ -292,7 +300,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/plate_header"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -301,9 +309,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_weight="1"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:padding="10dp"
-                        android:text="@string/default_vehicle">
+                        android:text="@string/default_vehicle"
+                        android:background="@null">
 
                     </TextView>
 
@@ -325,7 +334,8 @@
                     android:layout_marginTop="24dp"
                     android:text="@string/sos"
                     android:textSize="26sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_marginBottom="8dp"/>
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/defaultSOSCardView"
@@ -350,7 +360,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/name_header"
-                                android:textSize="16sp"
+                                android:textSize="20sp"
                                 android:textStyle="bold" />
 
                             <TextView
@@ -360,7 +370,9 @@
                                 android:text="@string/name"
                                 android:padding="10dp"
                                 android:layout_marginLeft="5dp"
-                                android:layout_weight="1">
+                                android:layout_weight="1"
+                                android:textSize="20dp"
+                                android:background="@null">
                             </TextView>
 
                             <ImageView
